package creatures;

public interface Cheerer {
    void cheer();
}
