package creatures;

public class Damon extends SnakeSide{
    public Damon(String name){super(name);}
    public Damon(){super();}
    public Damon(String name, int x, int y){
        super(name, x, y);
    }

}
