package creatures;

public abstract class HuluwaSide extends Creature {
    public HuluwaSide(String name){super(name);}
    public HuluwaSide(){super();}
    public HuluwaSide(String name, int x, int y){
        super(name, x, y);
    }
}
