package creatures;

public abstract class SnakeSide extends Creature {
    public SnakeSide(){super();}
    public SnakeSide(String name){super(name);}
    public SnakeSide(String name, int x, int y){super(name, x, y);}
}
